# eur-lex-loader

./: CHECKS_TO_BE_DONE.md  CLAUDE.md  Cargo.toml  LICENSE.md  README.md
data/32006R1907/: CL2006R1907EN0670010.0001.xml
data/32011L0083/: CL2011L0083EN0020010.0001.xml
data/32017R1001/: L_2017154EN.01008901.xml  L_2017154EN.01009301.xml  L_2017154EN.01009401.xml
data/32024R1689/: L_202401689EN.013201.fmx.xml  L_202401689EN.013901.fmx.xml  L_202401689EN.014101.fmx.xml  L_202401689EN.014301.fmx.xml  L_202401689EN.toc.fmx.xml
data/Consumer_directive_consolidated/: CL2011L0083EN0020010.0001.doc.xml
data/DSA/: L_2022277EN.01000101.doc.xml  L_2022277EN.01000101.xml
data/DSMA/: L_2019130EN.01009201.doc.xml  L_2019130EN.01009201.xml
data/EU_AI_ACT/: L_202401689EN.012401.fmx.xml  L_202401689EN.012601.fmx.xml  L_202401689EN.012701.fmx.xml  L_202401689EN.013001.fmx.xml  L_202401689EN.013301.fmx.xml  L_202401689EN.013401.fmx.xml  L_202401689EN.013601.fmx.xml  L_202401689EN.013801.fmx.xml  L_202401689EN.014401.fmx.xml  L_202401689EN.doc.fmx.xml
data/REACH_reg/: CL2006R1907EN0670010.0001.doc.xml  L_2007136EN.01027602.tif  L_2011134EN.01000501.tif
data/TrademarkAct/: L_2017154EN.01000101.doc.xml  L_2017154EN.01000101.xml
man/: eur_lex_fetch.1  eur_lex_loader.1
src/: error.rs  fetch.rs  lib.rs  loader.rs  main.rs  model.rs  text.rs
src/parser/: act.rs  annex.rs  citation.rs  mod.rs  text.rs
tests/: consumer_directive.rs  dsa.rs  dsma.rs  eu_ai_act.rs  reach.rs  trademark_act.rs
